---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: ????
  Info:
    - Crude initial player facing furnace
    - Complete the prototype switcharoo
    - Fix the pipeline rendering
    - Make the working visualizations operational again
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2025. 04. 27
  Info:
    - Import new batch
    - Update lua for new sprite batch
    - Try some imagemagik commands
    - Fix shadow fattening
    - Prune storage tank graphic set
    - Update the batch of sprites for the shadow
    - Work on the back legs
    - Play around with the pipe cover pictures
    - Block rotation so we only need one pipe
    - Implement the rendered pipes
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025. 04. 22
  Info:
    - Use a hidden furnace for the working visualizations
    - Add thumbnail
    - Fix pipe on the right overlaying the tower
    - Get rid of the fluid window
    - Actualize thumbnail
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2025. 04. 22
  Info:
    - Add the tip occluder back
    - Import and implement a new batch of graphics
    - Properly implement the horizontal/vertical single sprite
    - Update the left and right pipe covers
    - Fixed eroneous marked shadowless sprites
    - Eliminate the vanilla covers
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 04. 21
  Info:
    - Import and implement another new batch of graphics
    - Pass the pipes under elevated rails
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 04. 20
  Info:
    - Import and implement the new batch of graphics