@@ -3,7 +3,7 @@
     "title": "Pipe pillars",
     "description": "It probably has something to do with the title.",
 
-    "version": "0.0.10",
+    "version": "0.0.11",
     "author": "Quezler",
     "factorio_version": "2.0",
 
